web-emu: Fix alignment of savestate preview images

--- a/module/web-emu/styles/_dialog_savestates.scss
+++ b/module/web-emu/styles/_dialog_savestates.scss
@@ -10,6 +10,10 @@
 
 #dialog-savestates {
 	.control-item .image {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
 		background: black;
 
 		min-width: 64px;
